Fix dropdown icon spacing, fix issues with selectOnKeydown when using text that includes html (like images)

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -591,10 +591,10 @@
   color: @iconColor;
 }
 
-.ui.button:not(.icon) > .icon:not(.button) {
+.ui.button:not(.icon) > .icon:not(.button):not(.dropdown) {
   margin: @iconMargin;
 }
-.ui.button:not(.icon) > .right.icon:not(.button) {
+.ui.button:not(.icon) > .right.icon:not(.button):not(.dropdown) {
   margin: @rightIconMargin;
 }
 
